handovers/600/0602_first_errors.txt
============================= test session starts =============================
platform win32 -- Python 3.11.9, pytest-8.4.2, pluggy-1.6.0
rootdir: F:\GiljoAI_MCP
configfile: pyproject.toml
plugins: anyio-4.10.0, asyncio-1.1.0, cov-7.0.0
asyncio: mode=Mode.AUTO, asyncio_default_fixture_loop_scope=None, asyncio_default_test_loop_scope=function
Loaded environment from: F:\GiljoAI_MCP\.env
Warning: netifaces not installed. Some network tests will be skipped.
Install with: pip install netifaces
collected 1348 items / 5 errors / 13 skipped

=================================== ERRORS ====================================
____________ ERROR collecting tests/installer/test_installer_v3.py ____________
ImportError while importing test module 'F:\GiljoAI_MCP\tests\installer\test_installer_v3.py'.
Hint: make sure your test modules/packages have valid Python names.
Traceback:
C:\Program Files\Python311\Lib\importlib\__init__.py:126: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
tests\installer\test_installer_v3.py:20: in <module>
    from installer.core.installer import BaseInstaller, LocalhostInstaller, ServerInstaller
E   ModuleNotFoundError: No module named 'installer.core.installer'
____ ERROR collecting tests/integration/test_0104_complete_integration.py _____
C:\Program Files\Python311\Lib\site-packages\_pytest\python.py:498: in importtestmodule
    mod = import_path(
C:\Program Files\Python311\Lib\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
C:\Program Files\Python311\Lib\importlib\__init__.py:126: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1204: in _gcd_import
    ???
<frozen importlib._bootstrap>:1176: in _find_and_load
    ???
<frozen importlib._bootstrap>:1147: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:690: in _load_unlocked
    ???
C:\Program Files\Python311\Lib\site-packages\_pytest\assertion\rewrite.py:177: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
C:\Program Files\Python311\Lib\site-packages\_pytest\assertion\rewrite.py:357: in _rewrite_test
    tree = ast.parse(source, filename=strfn)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
C:\Program Files\Python311\Lib\ast.py:50: in parse
    return compile(source, filename, mode, flags,
E     File "F:\GiljoAI_MCP\tests\integration\test_0104_complete_integration.py", line 81
E       async with manager.get_session_async() as session:
E   IndentationError: unexpected indent
_____ ERROR collecting tests/integration/test_multi_tool_orchestration.py _____
ImportError while importing test module 'F:\GiljoAI_MCP\tests\integration\test_multi_tool_orchestration.py'.
Hint: make sure your test modules/packages have valid Python names.
Traceback:
C:\Program Files\Python311\Lib\importlib\__init__.py:126: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
tests\integration\test_multi_tool_orchestration.py:31: in <module>
    from src.giljo_mcp.agent_communication_queue import AgentCommunicationQueue
E   ModuleNotFoundError: No module named 'src.giljo_mcp.agent_communication_queue'
_________ ERROR collecting tests/integration/test_server_mode_auth.py _________
'security' not found in `markers` configuration option
______ ERROR collecting tests/integration/test_stage_project_workflow.py ______
ImportError while importing test module 'F:\GiljoAI_MCP\tests\integration\test_stage_project_workflow.py'.
Hint: make sure your test modules/packages have valid Python names.
Traceback:
C:\Program Files\Python311\Lib\importlib\__init__.py:126: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
tests\integration\test_stage_project_workflow.py:27: in <module>
    from src.giljo_mcp.models import AgentJob, Product, Project, User
E   ImportError: cannot import name 'AgentJob' from 'src.giljo_mcp.models' (F:\GiljoAI_MCP\src\giljo_mcp\models\__init__.py)
============================== warnings summary ===============================
C:\Program Files\Python311\Lib\site-packages\pydantic\_internal\_config.py:323
  C:\Program Files\Python311\Lib\site-packages\pydantic\_internal\_config.py:323: PydanticDeprecatedSince20: Support for class-based `config` is deprecated, use ConfigDict instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.11/migration/
    warnings.warn(DEPRECATION_MESSAGE, DeprecationWarning)

api\endpoints\prompts.py:391
  F:\GiljoAI_MCP\api\endpoints\prompts.py:391: DeprecationWarning: `regex` has been deprecated, please use `pattern` instead
    tool: str = Query("claude-code", regex="^(claude-code|codex|gemini)$"),

tests\installer\fixtures\test_configs.py:12
  F:\GiljoAI_MCP\tests\installer\fixtures\test_configs.py:12: PytestCollectionWarning: cannot collect test class 'TestEnvironment' because it has a __init__ constructor (from: tests/installer/fixtures/test_configs.py)
    @dataclass

-- Docs: https://docs.pytest.org/en/stable/how-to/capture-warnings.html
=========================== short test summary info ===========================
SKIPPED [1] tests\installer\integration\test_installation_flow.py:25: Not all components available
SKIPPED [1] tests\installer\unit\test_config_manager.py:32: Configuration Manager not available
SKIPPED [1] tests\installer\unit\test_docker.py:24: Docker installer not available
SKIPPED [1] tests\installer\unit\test_health_checker.py:22: Health check system not available
SKIPPED [1] tests\installer\unit\test_postgresql.py:24: PostgreSQL installer not available
SKIPPED [1] tests\installer\unit\test_profile.py:31: Profile system not available
SKIPPED [1] tests\installer\unit\test_redis.py:24: Redis installer not available
SKIPPED [1] tests\installer\unit\test_service_manager.py:23: Service Manager not available
SKIPPED [1] tests\integration\test_backup_integration.py:19: TODO(0127a-2): Comprehensive refactoring needed for MCPAgentJob model
SKIPPED [1] tests\integration\test_claude_code_integration.py:15: TODO(0127a-2): Comprehensive refactoring needed for MCPAgentJob model
SKIPPED [1] tests\integration\test_hierarchical_context.py:12: TODO(0127a-2): Comprehensive refactoring needed for MCPAgentJob model
SKIPPED [1] tests\integration\test_message_queue_integration.py:8: TODO(0127a-2): Comprehensive refactoring needed for MCPAgentJob model
SKIPPED [1] tests\integration\test_orchestrator_template.py:13: TODO(0127a-2): Comprehensive refactoring needed for MCPAgentJob model
ERROR tests/installer/test_installer_v3.py
ERROR tests/integration/test_0104_complete_integration.py
ERROR tests/integration/test_multi_tool_orchestration.py
ERROR tests/integration/test_server_mode_auth.py - Failed: 'security' not fou...
ERROR tests/integration/test_stage_project_workflow.py
!!!!!!!!!!!!!!!!!!!!!!!!!! stopping after 5 failures !!!!!!!!!!!!!!!!!!!!!!!!!!
================== 13 skipped, 3 warnings, 5 errors in 2.60s ==================
